--- a/loading.css
+++ b/loading.css
@@ -1,49 +1,50 @@
 .logo{
-  fill:#80FF00;
+  fill:#80FF0000;
   stroke:#80FF00;
   stroke-width: 10;
   stroke-miterlimit: 5;
-  fill-opacity: 1;
-  animation-timing-function: ease-in-out;
+  fill-opacity: 0;
   animation-fill-mode: forwards;
   animation-iteration: 1;
 
   animation-name: DrawLine, FadeStroke, FillIn;
-  animation-duration: 6s, 1s, 1s;
-  animation-delay: 0s, 4s, 0s;
-  stroke-dashArray: 6000;
-  stroke-dashoffset: 6000;
-  height: 100%;
-  width: auto;
+  animation-duration: 0s, 0s, 0s;
+  animation-delay: 0s, 0s, 0s;
+  stroke-dashoffset: 2000;
+  height: auto;
+  width: 100%;
   display: block;
   margin: auto;
 }
 @keyframes DrawLine {
-  from { stroke-dashOffset: 6000}
-  to { stroke-dashOffset: 0; }
+  0%{    stroke-dashOffset: 2000;}
+  50%{   stroke-dashOffset: 200;}
+  100% { stroke-dashOffset: 0; }
 }
 
 @keyframes FadeStroke {
-  to { stroke-opacity: 0; }
+  0%  { stroke-opacity: 1;}
+  50% { stroke-opacity: 0.3;}
+  100%{ stroke-opacity: 0; }
 }
 
 @keyframes FillIn {
   from { fill-opacity: 0; }
   to { fill-opacity: 0; }
 }
-.Animate-Draw {
+/* .Animate-Draw {
   fill-opacity: 0;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
   animation-iteration: 1;
 
   animation-name: DrawLine, FadeStroke, FillIn;
-  animation-duration: 4s, 1s, 1s;
+  animation-duration: 1s, 1s, 1s;
   animation-delay: 0s, 3.5s, 3.5s;
 }
 #Draw-Frame {
   animation-delay: 1s, 3.5s, 3.5s;
-  animation-duration: 3.5s, 1s, 1s;
+  animation-duration: 1s, 1s, 1s;
   stroke-dashArray: 1500;
   stroke-dashoffset: 1500;
-}
+} */
