--- a/my-styles.css
+++ b/my-styles.css
@@ -129,7 +129,7 @@ body{
 }
 
 #sidebar {
-        padding-top: 200px;
+        padding-top: 10vh;
         min-width: 250px;
         max-width: 250px;
         margin-right: -80px;
