window.location.href => window.location.href

--- a/my-styles.css
+++ b/my-styles.css
@@ -43,7 +43,7 @@ body.loading .modal {
 body{
   font-family: Ocra;
   color: white;
-  overflow: hidden;
+  overflow-x: hidden;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
