--- a/my-styles.css
+++ b/my-styles.css
@@ -250,7 +250,6 @@ a:active{
 #uslugi h3{
   color: white;
   text-align: center;
-
 }
 #uslugi span{
   display: inline-block;
@@ -269,6 +268,19 @@ a:active{
 @keyframes spanBorder{
   from{ border-bottom-width: 0px;}
   to{ border-bottom-width: 2px;;}
+}
+
+#tresc{
+  text-align: center;
+}
+
+#tresc h4{
+  font-weight: bold;
+}
+
+#tresc>div>div{
+  height: 200px;
+  border: 1px solid white;
 }
 
 .contactForm{
