--- a/my-styles.css
+++ b/my-styles.css
@@ -255,6 +255,36 @@ a:active{
   font-size: 36px;
 }
 
+.zdjeciezOpisem{
+  min-height: 200px;
+  height: auto;
+  display: table;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  width: 90vw;
+  padding: 10px 20px 10px 30px;
+}
+
+.zdjeciezOpisem img{
+  border-radius: 50%;
+  width: 200px;
+  float: left;
+}
+
+.zdjeciezOpisem span{
+  display: table-cell;
+  vertical-align: middle;
+  width: 70vw;
+}
+
+.zdjeciezOpisem h4, .zdjeciezOpisem h2{
+  margin: 10px 0 0 15px;
+  text-align: left;
+}
+.zdjeciezOpisem h2{
+  margin-top: 0;
+}
+
 #uslugi h3{
   margin-top: 0;
   color: white;
@@ -297,8 +327,8 @@ a:active{
   margin-top: 20px;
 }
 
-#tresc>div>div>div{
-  min-height: 330px;
+.minH330>div{
+  min-height: 390px;
   border: 1px solid white;
 }
 
@@ -334,6 +364,13 @@ a:active{
   display: none;
 }
 
+.priceTabWesela{
+  height: 80px;
+  border: 1px solid white;
+  padding-left: 5px;
+  text-align: center;
+}
+
 .firstIconUro{
   width: 35%;
   min-width: 130px;
@@ -366,7 +403,6 @@ a:active{
 
 #dzieciMenu{
   cursor: pointer;
-
 }
 
 @media (min-width: 768px){
@@ -375,20 +411,32 @@ a:active{
     border: 3px dashed white;
     border-right: none;
   }
+
+  #uro h2{
+    margin-bottom: 100px;
+  }
+
   #wes{
     height: 33.3vh;
     border: 3px dashed white;
+
   }
 
   #szk{
     height: 33.3vh;
     border-left: 3px dashed white;
     border-right: 3px dashed white;
+
   }
 
   #hot{
     height: 33.3vh;
     border: 3px dashed white;
+
+  }
+
+  #dzieciMenu img{
+    max-height: 70%; max-width: 80%;
   }
 }
 
@@ -408,6 +456,14 @@ a:active{
     height: 25vh;
     border: 3px dashed white;
     border-top: none;
+  }
+
+  #dzieciMenu img{
+    max-height: 50%; max-width: 80%;
+  }
+
+  .priceTabWesela{
+    font-size: 80%;
   }
 }
 
