--- a/my-styles.css
+++ b/my-styles.css
@@ -12,12 +12,12 @@ Kolory Animatu w przestrzeni RGBA
 .modal {
     display:    none;
     position:   fixed;
-    z-index:    1000;
+    z-index:    9999;
     top:        0;
     left:       0;
     height:     100%;
     width:      100%;
-    background: rgba( 255, 255, 255, 0.8)
+    background: rgba( 255, 255, 255, 1)
                 50% 50%
                 no-repeat;
 }
@@ -68,7 +68,7 @@ body{
   bottom:0;
   transform: rotate(90deg);
   margin: auto;
-  z-index: 9999;
+  z-index: 1000;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-duration: 3s;
@@ -212,7 +212,7 @@ body{
   text-align: center;
   display: none;
   padding-top: 5px;
-  z-index: 9999;
+  z-index: 1000;
 }
 
 a{
@@ -229,7 +229,7 @@ a:active{
 
 .firstImg{
   width: 100%;
-  height: 100%;
+  margin-top: 110px;
   filter: blur(7px);
   z-index: 1;
   animation-delay: 2s;
@@ -382,6 +382,10 @@ a:active{
   display: none;
 }
 
+.ofertaSzkoly>div{
+  border: 1px solid white;
+}
+
 .calcH li, .mobileOfertaSzkoly li{
   width: inherit !important;
   padding-left: 40px;
@@ -396,6 +400,7 @@ a:active{
 .mobileOfertaSzkoly{
   height: auto !important;
 }
+
 #targetH, .calcH{
   height: auto !important;
   min-height: 350px !important;
@@ -403,6 +408,22 @@ a:active{
 
 #dzieciMenu{
   cursor: pointer;
+}
+
+.slider{
+  width: 80vw;
+  left: 0;
+  right: 0;
+  margin: 20px auto 50px auto;
+}
+
+.slider img{
+  width: 60vw;
+  border-radius: 10%;
+  position: relative;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px){
@@ -467,6 +488,23 @@ a:active{
   }
 }
 
+#dorosli img, #eventy img{
+  width: 40vw;
+  animation-name: rotateWrench;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  transform-origin: 80% 20%;
+  display: none;
+  position: relative;
+  left: 0; right: 0;
+  margin: 5vh auto;
+}
+
+@keyframes rotateWrench {
+  from{ transform: rotate(0deg)}
+  to  { transform: rotate(50deg)}
+}
 
 .contactForm{
   width: 70%;
