--- a/my-styles.css
+++ b/my-styles.css
@@ -346,7 +346,7 @@ a:active{
 
 .tresc li, #kontakt li, #wyjazdy li{
   line-height: 200%;
-  width: 30vw;
+  width: 80vw;
   list-style-type:none;
   background-image:url(src/kolkoAnimatu.png);
   background-repeat: no-repeat;
@@ -356,6 +356,14 @@ a:active{
   right: 0;
   margin: 10px auto;
   padding-left: 25px;
+  text-align:  left !important;
+}
+
+@media (max-width: 400px){
+  #wyjazdy li{
+    margin-left: 10px;
+    width: 70vw;
+  }
 }
 
 #kontakt li{
@@ -364,8 +372,12 @@ a:active{
 
 #tresc li p, #wyjazdy li p{
   line-height: normal;
-  text-align: left;
-  padding-left: 25px;
+  text-align: left !important;
+  margin-left: 25px !important;
+}
+
+li>p{
+  margin-left: 25px !important;
 }
 
 #urodziny, #wesela, #szkoly, #hotele{
@@ -494,6 +506,24 @@ a:active{
 
   .priceTabWesela{
     font-size: 80%;
+  }
+
+  .minH330>div{
+    height: 50vh;
+  }
+  .minH330>div h3{
+    margin-bottom: 0px;
+  }
+  .iconUro{
+    height: 50%;
+    min-width: 0;
+  }
+  .znikajacyTekst{
+    margin-top: 5px;
+  }
+  .znikajacyTekst h4{
+    margin-top: 5px;
+    font-size: 12px;
   }
 }
 
